# advent-of-code

2020/: package.yaml
2021/: README.md  adventOfCode2021.cabal  hie.yaml  package.yaml
2021/app/day9/: Main.hs
2022/: new-day.sh  template.rs
2022/day1/src/: main.rs
2022/day10/src/: main.rs
2022/day11/: Cargo.toml
2022/day11/src/: main.rs  monkey.rs
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day2/src/: main.rs
2022/day3/src/: main.rs
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/src/: main.rs
2022/day7/src/: filesystem.rs  main.rs  parser.rs
2022/day8/src/: main.rs
2023/: advent_of_code.opam  dune-project
2023/lib/: dune  read.ml
2024/: advent_of_code.opam  dune-project
2024/lib/: dune  parse.ml  util.ml
